--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/* 
+
+*/
+
 /* MAIN-COLOR:#087f5b
 #099268
    GREY-COLOR:#343a40 */
@@ -111,7 +115,11 @@ img {
 }
 
 /* FEATURES */
-.features-icon {
+.feature-icon {
+  stroke: #087f5b;
+  height: 32px;
+  width: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -177,6 +185,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
